use the configured config file and directory when generating keys in expert mode

BUG:428215